--- a/requirements-backtrader.txt
+++ b/requirements-backtrader.txt
@@ -1,19 +1,21 @@
-astroid==3.1.0
-backtrader==1.9.78.123
-contourpy==1.2.0
-cycler==0.12.1
-dill==0.3.8
-fonttools==4.50.0
-isort==5.13.2
-kiwisolver==1.4.5
-matplotlib==3.8.3
-mccabe==0.7.0
+appdirs==1.4.4
+beautifulsoup4==4.12.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+frozendict==2.4.1
+html5lib==1.1
+idna==3.6
+lxml==5.2.1
+multitasking==0.0.11
 numpy==1.26.4
-packaging==24.0
-pillow==10.2.0
-platformdirs==4.2.0
-pylint==3.1.0
-pyparsing==3.1.2
+pandas==2.2.1
+peewee==3.17.1
 python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.31.0
 six==1.16.0
-tomlkit==0.12.4
+soupsieve==2.5
+tzdata==2024.1
+urllib3==2.2.1
+webencodings==0.5.1
+yfinance==0.2.37
