--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,33 @@
 appdirs==1.4.4
 backtrader==1.9.78.123
 beautifulsoup4==4.12.3
-certifi==2024.2.2
+certifi==2024.6.2
 charset-normalizer==3.3.2
 contourpy==1.2.1
 cycler==0.12.1
-fonttools==4.51.0
-frozendict==2.4.2
+fonttools==4.53.0
+frozendict==2.4.4
 html5lib==1.1
 idna==3.7
 jedi==0.19.1
 kiwisolver==1.4.5
-lxml==5.2.1
-matplotlib==3.8.4
+lxml==5.2.2
+matplotlib==3.9.0
 multitasking==0.0.11
 numpy==1.26.4
-packaging==24.0
+packaging==24.1
 pandas==2.2.2
 parso==0.8.4
-peewee==3.17.1
+peewee==3.17.5
 pillow==10.3.0
+platformdirs==4.2.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
-requests==2.31.0
+requests==2.32.3
 six==1.16.0
 soupsieve==2.5
 tzdata==2024.1
 urllib3==2.2.1
 webencodings==0.5.1
-yfinance==0.2.37
+yfinance==0.2.40
